# simple_vector

./: CMakeLists.txt  README.md
include/vector/: vector_private.h
include/vector/interface/: vector.h
src/: CMakeLists.txt  main.c  vector.c
